added html and starting css to match mockup

--- a/index.html
+++ b/index.html
@@ -9,6 +9,65 @@
 </head>
 
 <body>
+    <main>
+        <header>
+
+            <div id="logo">
+                <!-- <img src="./assets/images/sun-3337-svg.png"> -->
+            </div>
+
+            <div id="searchContainer">
+                <form id="searchBar">
+                    <input type="text" id="searchInput" name="cityName" class="searchInput" placeholder="Search">
+                </form>
+            </div>
+            
+        </header>
+
+        <content>
+
+            <div id="prevSearchContainer">
+                <div class="prevSearch">
+                    <p>City, State</p>
+                </div>
+            </div>
+
+            <div class="mainWeatherContainer">
+
+                <div class="selectedWeatherContainer">
+                    <p>SELECTED WEATHER</p>
+                </div>
+
+                <div class="futureWeatherContainer">
+                    <div class="futureWeatherCard" id="weatherSlot1">
+                        <p>Weather Slot 1</p>
+                    </div>
+                    <div class="futureWeatherCard" id="weatherSlot2">
+                        <p>Weather Slot 2</p>
+                    </div>
+                    <div class="futureWeatherCard" id="weatherSlot3">
+                        <p>Weather Slot 3</p>
+                    </div>
+                    <div class="futureWeatherCard" id="weatherSlot4">
+                        <p>Weather Slot 4</p>
+                    </div>
+                    <div class="futureWeatherCard" id="weatherSlot5">
+                        <p>Weather Slot 5</p>
+                    </div>
+                </div>
+
+            </div>
+
+            <div class ="highLowContainer">
+                <p>this is the high low container</p>
+            </div>
+
+        </content>
+
+        <footer>
+            <p>&copy; Lexi Menendez</p>
+        </footer>
+    </main>
     <script src="./assets/js/script.js"></script>
 </body>
 </html>
