--- a/index.html
+++ b/index.html
@@ -19,16 +19,18 @@
             <div id="searchContainer">
                 <form id="searchBar">
                     <input type="text" id="searchInput" name="cityName" class="searchInput" placeholder="Search">
+                    <button type="button" id="searchBtn">
+                        <svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 512 512"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M416 208c0 45.9-14.9 88.3-40 122.7L502.6 457.4c12.5 12.5 12.5 32.8 0 45.3s-32.8 12.5-45.3 0L330.7 376c-34.4 25.2-76.8 40-122.7 40C93.1 416 0 322.9 0 208S93.1 0 208 0S416 93.1 416 208zM208 352a144 144 0 1 0 0-288 144 144 0 1 0 0 288z"/></svg>
+                    </button>
                 </form>
             </div>
-            
+
         </header>
 
         <content>
 
             <div id="prevSearchContainer">
                 <div class="prevSearch">
-                    <p>City, State</p>
                 </div>
             </div>
 
@@ -40,18 +42,23 @@
 
                 <div class="futureWeatherContainer">
                     <div class="futureWeatherCard" id="weatherSlot1">
+                        <img>
                         <p>Weather Slot 1</p>
                     </div>
                     <div class="futureWeatherCard" id="weatherSlot2">
+                        <img>
                         <p>Weather Slot 2</p>
                     </div>
                     <div class="futureWeatherCard" id="weatherSlot3">
+                        <img>
                         <p>Weather Slot 3</p>
                     </div>
                     <div class="futureWeatherCard" id="weatherSlot4">
+                        <img>
                         <p>Weather Slot 4</p>
                     </div>
                     <div class="futureWeatherCard" id="weatherSlot5">
+                        <img>
                         <p>Weather Slot 5</p>
                     </div>
                 </div>
