--- a/index.html
+++ b/index.html
@@ -37,29 +37,46 @@
             <div class="mainWeatherContainer">
 
                 <div class="selectedWeatherContainer">
-                    <p>SELECTED WEATHER</p>
+                    <img class="currentIcon">
+                    <p class="currentTemp"></p>
+                    <div>
+                        <p class="currentCity"></p>
+                        <p class="currentDate"></p>
+                    </div>
+                    <div class="weatherDetails">
+                        <p class="currentFeels"></p>
+                        <p class="currentHigh"></p>
+                        <p class="currentLow"></p>
+                        <p class="currentWind"></p>
+                        <p class="currentHumid"></p>
+                    </div>
                 </div>
 
                 <div class="futureWeatherContainer">
-                    <div class="futureWeatherCard" id="weatherSlot1">
+                    <div class="futureWeatherCard" id="weatherSlot0">
                         <img>
-                        <p>Weather Slot 1</p>
+                        <p class="temp"></p>
+                        <p class="date"></p>
                     </div>
-                    <div class="futureWeatherCard" id="weatherSlot2">
+                    <div class="futureWeatherCard" id="weatherSlot8">
                         <img>
-                        <p>Weather Slot 2</p>
+                        <p class="temp"></p>
+                        <p class="date"></p>
                     </div>
-                    <div class="futureWeatherCard" id="weatherSlot3">
+                    <div class="futureWeatherCard" id="weatherSlot16">
                         <img>
-                        <p>Weather Slot 3</p>
+                        <p class="temp"></p>
+                        <p class="date"></p>
                     </div>
-                    <div class="futureWeatherCard" id="weatherSlot4">
+                    <div class="futureWeatherCard" id="weatherSlot24">
                         <img>
-                        <p>Weather Slot 4</p>
+                        <p class="temp"></p>
+                        <p class="date"></p>
                     </div>
-                    <div class="futureWeatherCard" id="weatherSlot5">
+                    <div class="futureWeatherCard" id="weatherSlot32">
                         <img>
-                        <p>Weather Slot 5</p>
+                        <p class="temp"></p>
+                        <p class="date"></p>
                     </div>
                 </div>
 
@@ -75,6 +92,15 @@
             <p>&copy; Lexi Menendez</p>
         </footer>
     </main>
+    <script
+    src="https://cdn.jsdelivr.net/npm/dayjs@1.11.3/dayjs.min.js"
+    integrity="sha256-iu/zLUB+QgISXBLCW/mcDi/rnf4m4uEDO0wauy76x7U="
+    crossorigin="anonymous"></script>
+  
+    <script 
+    src="https://code.jquery.com/jquery-3.5.1.min.js"
+    integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+    crossorigin="anonymous"></script>
     <script src="./assets/js/script.js"></script>
 </body>
 </html>
