--- a/index.html
+++ b/index.html
@@ -12,10 +12,6 @@
     <main>
         <header>
 
-            <div id="logo">
-                <!-- <img src="./assets/images/sun-3337-svg.png"> -->
-            </div>
-
             <div id="searchContainer">
                 <form id="searchBar">
                     <input type="text" id="searchInput" name="cityName" class="searchInput" placeholder="Search">
@@ -83,7 +79,7 @@
             </div>
 
             <div class ="highLowContainer">
-                <p>this is the high low container</p>
+                <canvas id="highLowChart" style="position: relative; height: 90px; width:900px;"></canvas>
             </div>
 
         </content>
@@ -92,15 +88,26 @@
             <p>&copy; Lexi Menendez</p>
         </footer>
     </main>
+
+    <!-- DAY JS -->
     <script
     src="https://cdn.jsdelivr.net/npm/dayjs@1.11.3/dayjs.min.js"
     integrity="sha256-iu/zLUB+QgISXBLCW/mcDi/rnf4m4uEDO0wauy76x7U="
     crossorigin="anonymous"></script>
   
+    <!-- JQuery -->
     <script 
     src="https://code.jquery.com/jquery-3.5.1.min.js"
     integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
     crossorigin="anonymous"></script>
+
+    <!-- Chart.js -->
+    <script
+    src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js">
+    </script>
+
+
+    <!-- Javascript file -->
     <script src="./assets/js/script.js"></script>
 </body>
 </html>
